<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="client">Client</string>
    <string name="equipment">Equipment</string>
    <string name="charges">Charges</string>
    <string name="reports">Report</string>
    <string name="names">Names</string>
    <string name="surname">Surname</string>
    <string name="description">Description</string>
    <string name="telephone">Telephone</string>
    <string name="identificationcard">Identification card</string>
    <string name="personalInformation">Personal information</string>
    <string name="contactDetails">Contact details</string>
    <string name="newClient">New Client</string>
    <string name="contactAddress">Contact address</string>
    <string name="direction">Direction</string>
    <string name="town">Town</string>
    <string name="country">Country</string>
    <string name="app_name">MikroISP</string>
    <string name="payment">Payment</string>
    <string name="customerDetail">Customer Detail</string>
    <string name="ClientType">Type</string>
    <string name="addService">Add Service</string>
    <string name="Client">Client</string>
    <string name="SearchByName">Search By Name</string>
    <string name="title">Search By Name</string>
    <string name="supporting_text">Search By Name</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Aceptar</string>
    <string name="serviceDetail">Service detail</string>
    <string name="clientData">Client Data</string>
    <string name="plan">Plan</string>
    <string name="planName">Plan name </string>
    <string name="planState">Plan State </string>
    <string name="planValue">Value </string>
    <string name="equipmentInformation">Equipment Information</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="mac">Mac</string>
    <string name="isAssigned">Is Assigned</string>
    <string name="brand">Brand</string>
    <string name="statusDevice">Status</string>
    <string name="close">Close</string>
    <string name="clientInformation">Client Information</string>
    <string name="clientStatus">Status</string>
    <string name="editClient">Edit Client</string>
    <string name="newEquipment">New Equipment</string>
    <string name="versionDevice">Version</string>
    <string name="provider">Provider</string>

</resources>

