<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/view_dashboard"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_client"
            android:title="@string/client" />

        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_equipment"
            android:title="@string/equipment"/>

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_report"
            android:title="@string/payment"/>

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_report"
            android:title="@string/reports"/>


    </group>
</menu>