<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.loogika.mikroisp.app.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_client"
        android:name="com.loogika.mikroisp.app.client.ClientActivity"
        android:label="@string/client"
        tools:layout="@layout/activity_client" />

    <activity
        android:id="@+id/nav_equipment"
        android:name="com.loogika.mikroisp.app.device.DeviceActivity"
        android:label="@string/equipment"
        tools:layout="@layout/activity_device" />

    <activity
        android:id="@+id/nav_payment"
        android:name="com.loogika.mikroisp.app.payment.PaymentActivity"
        android:label="@string/payment"
        tools:layout="@layout/activity_payment" />

    <activity
        android:id="@+id/nav_reports"
        android:name="com.loogika.mikroisp.app.report.ReportActivity"
        android:label="listado"
        tools:layout="@layout/activity_report" />

</navigation>